--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@ Although you can use them, for a more unique website, replace these images with 
     <title>Business 2</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS: You can use this stylesheet to override any Bootstrap styles and/or apply your own styles -->
-    <link href="css/custom.css" rel="stylesheet">
+    <link href="custom.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -104,7 +104,7 @@ Although you can use them, for a more unique website, replace these images with 
         <div class="container">
             <div class="row">
                 <div class="col-sm-6">
-                    <img class="img-responsive img-circle center-block" src="images/microphone.jpg" alt="">
+                    <img class="img-responsive img-circle center-block" src="microphone.jpg" alt="">
                 </div>
                 <div class="col-sm-6">
                 	<h2 class="section-header">Best in Class</h2>
@@ -126,7 +126,7 @@ Although you can use them, for a more unique website, replace these images with 
                 	<a href="#" class="btn btn-default btn-lg">Test It</a>
                 </div>    
                 <div class="col-sm-6">
-                    <img class="img-responsive img-circle center-block" src="images/iphone.jpg" alt="">
+                    <img class="img-responsive img-circle center-block" src="iphone.jpg" alt="">
                 </div>            
                 
             </div>
@@ -193,16 +193,16 @@ Although you can use them, for a more unique website, replace these images with 
     </footer>
 
     <!-- jQuery -->
-    <script src="js/jquery-1.11.3.min.js"></script>
+    <script src="jquery-1.11.3.min.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
-    <script src="js/bootstrap.min.js"></script>
+    <script src="bootstrap.min.js"></script>
 
     <!-- Plugin JavaScript -->
-    <script src="js/jquery.easing.min.js"></script>
+    <script src="jquery.easing.min.js"></script>
     
     <!-- Custom Javascript -->
-    <script src="js/custom.js"></script>
+    <script src="custom.js"></script>
 
 </body>
 
